# scantailor-universal

./: CMakeLists.txt
src/app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  StageListView.cpp  StageListView.h  main.cpp
src/app/resources/: resources.qrc
src/app/resources/icons/: COPYING
src/app/ui/: MainWindow.ui  SettingsDialog.ui
src/app_cli/: ConsoleBatch.cpp
src/core/: CMakeLists.txt  DjVuReader.cpp  PageId.cpp  PageId.h  StatusBarProvider.h  ThumbnailPixmapCache.cpp  ThumbnailSequence.cpp
src/core/filters/output/: CacheDrivenTask.cpp  Filter.cpp  Filter.h  Settings.cpp  Settings.h  Task.cpp
src/core/filters/publish/: CMakeLists.txt  CacheDrivenTask.cpp  CacheDrivenTask.h  DjVuPageGenerator.cpp  DjVuPageGenerator.h  DjbzDispatcher.cpp  DjbzDispatcher.h  DjbzManagerDialog.cpp  DjbzManagerDialog.h  Filter.cpp  Filter.h  ImageInfo.cpp  ImageInfo.h  MetadataEditorDialog.cpp  MetadataEditorDialog.h  OptionsWidget.cpp  OutputParams.cpp  OutputParams.h  Params.cpp  Params.h  Settings.cpp  Settings.h  Task.cpp  Task.h
src/core/filters/publish/ui/: PublishingOptionsWidget.ui
src/core/settings/: globalstaticsettings.cpp  globalstaticsettings.h  ini_keys.h
src/exporting/: ExportThread.cpp
